--- a/Android/scenes/joy/src/main/res/values/strings.xml
+++ b/Android/scenes/joy/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="joy_living_timeout_title">游戏超时自动退出</string>
     <string name="joy_living_host_timeout">重新体验游戏请返回创建房间</string>
     <string name="joy_living_abnormal_title">主播端异常</string>
+    <string name="joy_living_assistantUid_offline">需要主播端重新创建房间启动游戏</string>
     <string name="joy_living_user_timeout">重新体验游戏请返回进入房间</string>
     <string name="joy_send_message_success">指令发送成功</string>
     <string name="joy_join_the_camp_first">请先加入阵营</string>
