--- a/Android/scenes/play_zone/src/main/res/values/strings.xml
+++ b/Android/scenes/play_zone/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="play_zone_game_hall">模拟游戏大厅</string>
-    <string name="play_zone_switch_vendor">切换供应</string>
+    <string name="play_zone_game_hall">休闲游戏厅</string>
+    <string name="play_zone_switch_vendor">选择供应商</string>
     <string name="play_zone_vendor_sub">忽然玩法</string>
     <string name="play_zone_vendor_yygame">元游玩法</string>
     <string name="play_zone_vendor_groupplay">群玩玩法</string>
@@ -46,7 +46,7 @@
     <string name="play_zone_join_room_failed">加入房间失败，错误：%1s</string>
 
     <string name="play_zone_system">系统</string>
-    <string name="play_zone_room_welcome">欢迎来到声网休闲玩法！房间内严禁色情、赌博或暴力内容。</string>
+    <string name="play_zone_room_welcome">由环信IM提供消息服务能力</string>
 
     <string-array name="play_zone_roomName_array">
         <item>和你一起看月亮</item>
