--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="app_home_scene_ktv">在线K歌房</string>
     <string name="app_home_scene_voice">语聊房</string>
     <string name="app_home_scene_live">直播</string>
-    <string name="app_home_scene_game">互动小游戏</string>
+    <string name="app_home_scene_game">互动玩法</string>
     <string name="app_home_scene_live_merge">直播社交</string>
     <string name="app_home_scene_ktv_solo_chorus">独唱&amp;合唱</string>
     <string name="app_home_scene_ktv_solo_chorus_tips">超低延迟真合唱</string>
@@ -59,9 +59,9 @@
     <string name="app_home_scene_live_show1v1">秀场转1v1\n私密房</string>
     <string name="app_home_scene_live_show1v1_tips">秒转场&amp;秒接通</string>
     <string name="app_home_scene_game_joy">弹幕玩法</string>
-    <string name="app_home_scene_game_joy_tips">直播互动新玩法</string>
+    <string name="app_home_scene_game_joy_tips">发弹幕 畅快玩</string>
     <string name="app_home_scene_game_leisure">休闲玩法</string>
-    <string name="app_home_scene_game_leisure_tips">直播语聊更有趣</string>
+    <string name="app_home_scene_game_leisure_tips">直播间 更好玩</string>
 
     <string name="app_title_home">玩法</string>
     <string name="app_title_find">发现</string>
@@ -154,7 +154,7 @@
     <string name="app_about_cantata">大合唱</string>
     <string name="app_about_pure1v1">1v1私密房</string>
     <string name="app_about_showTo1v1">秀场转1v1私密房</string>
-    <string name="app_about_game">互动小游戏</string>
+    <string name="app_about_game">互动玩法</string>
     <string name="app_about_joy">声动互娱-弹幕玩法</string>
     <string name="app_about_play_zone">声动互娱-休闲玩法</string>
     <string name="app_about_customer_service">联系客服</string>
