--- a/Android/scenes/pure1v1/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/pure1v1/src/main/res/values-zh/strings.xml
@@ -49,7 +49,7 @@
     <string name="pure1v1_dashboard_channel_name">频道名: %s</string>
     <string name="pure1v1_debug">开发者设置</string>
     <string name="pure1v1_audio_dump">音频 Dump</string>
-    <string name="pure1v1_call_failed">呼叫失败：%s</string>
-    <string name="pure1v1_accept_failed">网络不佳，接受邀请失败，错误码：%s</string>
+    <string name="pure1v1_call_failed">网络不佳，呼叫失败，错误码：%d</string>
+    <string name="pure1v1_accept_failed">网络不佳，接受邀请失败，错误码：%d</string>
     <string name="pure1v1_room_list_refreshed">网络不佳，用户列表刷新失败，建议重试，错误：%s</string>
 </resources>
