--- a/Android/scenes/showTo1v1/src/main/res/values/strings.xml
+++ b/Android/scenes/showTo1v1/src/main/res/values/strings.xml
@@ -27,6 +27,12 @@
     <string name="show_to1v1_current_title">本人信息</string>
     <string name="show_to1v1_linking_title">对端信息</string>
     <string name="show_to1v1_call_toast_remote_busy">呼叫失败, 对方正忙</string>
+    <string name="show_to1v1_dashboard_item_camera">摄像头开</string>
+    <string name="show_to1v1_dashboard_item_camera_off">摄像头关</string>
+    <string name="show_to1v1_dashboard_item_mic">麦克风开</string>
+    <string name="show_to1v1_dashboard_item_mic_off">麦克风关</string>
+    <string name="show_to1v1_come_soon_remote">Hi，我暂时有事，很快回来…</string>
+    <string name="show_to1v1_come_soon_local">本地摄像头已关闭</string>
 
     <!--    dashboard-->
     <string name="show_to1v1_dashboard_bitrate">码率: %s kbps</string>
