--- a/iOS/AgoraEntScenarios/Scenes/KTV/KtvResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/KTV/KtvResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -253,7 +253,7 @@
 "ktv_create_room_title20" = "水洗晴空";
 "ktv_create_room_title21" = "轻风淡月";
 "ktv_room_exit" = "连接超时，房间已解散";
-"ktv_room_timeout" = "您已体验超过20分钟，当前房间已过期，请退出重新创建房间";
+"ktv_room_timeout" = "当前房间已过期，请退出重新创建房间";
 "ktv_room_offline" = "当前房间已过期,请退出";
 "ktv_owner_leave" = "房主已解散房间,请确认离开房间";
 "ktv_mic_full" = "麦位已满，请在他人下麦后重试";
