--- a/Android/scenes/show/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/show/src/main/res/values-zh/strings.xml
@@ -288,6 +288,7 @@
     <string name="show_accept_micseat_invitation_error">网络异常, 接受连麦邀请失败, 错误: %s</string>
     <string name="show_create_pk_invitation_error">网络异常, 邀请PK失败, 错误: %s</string>
     <string name="show_accept_pk_invitation_error">网络异常, 接受PK邀请失败, 错误: %s</string>
+    <string name="show_cannot_invite_pk">正在互动，请互动结束后再邀请主播PK</string>
 
     <string-array name="show_encoder">
         <item>硬编码</item>
