--- a/Android/common/ui-widget/src/main/res/values/strings.xml
+++ b/Android/common/ui-widget/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="ktv_online">在线K歌房</string>
     <string name="ktv_singbattle_online">嗨歌抢唱</string>
 
-    <string name="time_up_exit_room">您已体验超过20分钟，当前房间已过期，请退出重新创建房间</string>
+    <string name="time_up_exit_room">当前房间已过期，请退出重新创建房间</string>
     <string name="expire_exit_room">当前房间已过期，请退出</string>
 
     <string name="common_report_content">举报</string>
