--- a/Android/scenes/aichat/src/main/res/values/strings.xml
+++ b/Android/scenes/aichat/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="aichat_delete_agent_content">此操作不可恢复</string>
     <string name="aichat_conversation_empty">没有会话</string>
     <string name="aichat_create_agent">创建智能体</string>
+    <string name="aichat_create_group">创建群聊</string>
 </resources>
