--- a/Android/scenes/aichat/src/main/res/values/strings.xml
+++ b/Android/scenes/aichat/src/main/res/values/strings.xml
@@ -11,4 +11,15 @@
     <string name="aichat_delete_agent_content">此操作不可恢复</string>
     <string name="aichat_conversation_empty">没有会话</string>
     <string name="aichat_create_agent">创建智能体</string>
+
+<!--    创建智能体-->
+    <string name="aichat_create_count">创建个数</string>
+    <string name="aichat_create_name">名称</string>
+    <string name="aichat_create_name_hint">请输入智能体名称</string>
+    <string name="aichat_create_brief">设定简介</string>
+    <string name="aichat_create_brief_hint">对您创建的智能体进行简单介绍</string>
+    <string name="aichat_create_description">设定描述</string>
+    <string name="aichat_create_description_hint">填写您创建智能体设定的详细描述。如：你是一位经验丰富的英语老师，拥有激发学生学习热情的教学方法。你善于运用幽默和实际应用案例，使对话充满趣味。</string>
+    <string name="aichat_create_submit_toast">请填写智能体名称、简介和描述</string>
+
 </resources>
