--- a/Android/scenes/aichat/src/main/res/values/strings.xml
+++ b/Android/scenes/aichat/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
     <string name="aichat_create_submit_toast">请填写智能体名称、简介和描述</string>
 
     <string name="aichat_create_group">创建群聊</string>
+
+    <!-- 与智能体聊天  -->
+    <string name="aichat_lets_chat">Let\'s Chat</string>
 </resources>
