--- a/Android/scenes/aichat/src/main/res/values/strings.xml
+++ b/Android/scenes/aichat/src/main/res/values/strings.xml
@@ -27,4 +27,13 @@
     <string name="aichat_create_submit_toast">请填写智能体名称、简介和描述</string>
 
     <string name="aichat_create_group">创建群聊</string>
+    <string name="aichat_group_chat_name">群聊名称</string>
+    <string name="aichat_input_group_name_hint">请输入群聊名称</string>
+    <string name="aichat_group_partener">群聊伙伴</string>
+    <string name="aichat_group_create_desc">最多可以添加 5 个智能体</string>
+    <string name="aichat_add_agent">添加智能体</string>
+    <string name="aichat_add">添加</string>
+    <string name="aichat_all">全部</string>
+    <string name="aichat_input_chat_group_name">请填写群聊名称</string>
+    <string name="aichat_chat_group_select_atleast_desc">请至少选择一个智能体</string>
 </resources>
