--- a/Android/scenes/aichat/src/main/res/values/strings.xml
+++ b/Android/scenes/aichat/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <!-- 与智能体聊天  -->
     <string name="aichat_lets_chat">Let\'s Chat</string>
     <string name="aichat_chat_unknown_type">不支持的消息类型</string>
+    <string name="aichat_click_to_play">点击播放</string>
 </resources>
