--- a/Android/scenes/aichat/src/main/res/values/strings.xml
+++ b/Android/scenes/aichat/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="aichat_delete_conversation_title">确认删除会话？</string>
     <string name="aichat_delete_conversation_tips">此操作不可恢复</string>
     <string name="aichat_empty_description">我很神秘～</string>
+    <string name="aichat_message_unread_count_max">99+</string>
 
     <!--    创建智能体-->
     <string name="aichat_create_count">创建个数</string>
@@ -31,7 +32,7 @@
     <string name="aichat_group_chat_name">群聊名称</string>
     <string name="aichat_input_group_name_hint">请输入群聊名称</string>
     <string name="aichat_group_partener">群聊伙伴</string>
-    <string name="aichat_group_create_desc">最多可以添加 5 个智能体</string>
+    <string name="aichat_group_create_desc">最多可以添加 %d 个智能体</string>
     <string name="aichat_add_agent">添加智能体</string>
     <string name="aichat_add">添加</string>
     <string name="aichat_all">全部</string>
@@ -43,5 +44,5 @@
     <string name="aichat_chat_unknown_type">不支持的消息类型</string>
     <string name="aichat_click_to_play">点击播放</string>
     <string name="aichat_new_agent_welcome">智能体创建成功</string>
-    <string name="aichat_new_group_welcome">群组 %1$s 创建成功</string>
+    <string name="aichat_new_group_welcome">群聊创建成功</string>
 </resources>
