--- a/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
@@ -6,7 +6,7 @@
   
 */
 
-"app_name"="声动互娱";
+"app_name"="声动互娱-AI陪伴";
 "app_title_home"="玩法";
 "app_title_find"="发现";
 "app_title_mine"="我的";
@@ -67,7 +67,7 @@
 "app_voice_chat_spatialTip"="—空间音频模式";
 
 "app_about_app"="关于声动互娱";
-"app_about_name"="声动互娱";
+"app_about_name"="声动互娱-AI陪伴";
 "app_about_version"="版本号";
 "app_about_scene_version"="场景版本号";
 "app_about_chat_room"="语聊房";
