--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">声动互娱</string>
+    <string name="app_name">声动互娱-AI陪伴</string>
 
     <string name="app_agreement_page_title">个人信息保护指引</string>
     <string name="app_agreement_protection_tip1">声动互娱软件是一款用于向声网客户展示产品使用效果的测试产品，仅用于测试产品的功能、性能和可用性，而非提供给大众使用的正式产品。</string>
@@ -156,6 +156,7 @@
     <string name="app_about_pure1v1">1v1私密房</string>
     <string name="app_about_showTo1v1">秀场转1v1私密房</string>
     <string name="app_about_joy">小玩法</string>
+    <string name="app_about_aichat">AI陪伴</string>
     <string name="app_about_customer_service">联系客服</string>
     <string name="app_about_official_website">官网地址</string>
     <string name="app_about_phone_cancel">取消</string>
