--- a/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
@@ -190,8 +190,8 @@
 "home_content_item_live_desc_multiple" = "敬请期待";
 "home_content_item_live_title_show_1v1_private" = "秀场转1v1私密房";
 "home_content_item_live_desc_show_1v1_private" = "秒转场&秒接通";
-"home_content_item_live_title_joy" = "互动玩法";
-"home_content_item_live_desc_joy" = "直播互动新玩法";
+"home_content_item_live_title_joy" = "弹幕玩法";
+"home_content_item_live_desc_joy" = "发弹幕 畅快玩";
 
 "feedback_tags_flashback" = "闪退";
 "feedback_tags_audioStuck" = "音频卡顿";
